<resources>
    <string name="app_name">StockMarketCode</string>
    <string name="stock_market">stock market</string>
    <string name="emaill">stockmarket@gmail.com</string>
    <string name="buyers">buyers</string>
    <string name="sellers">sellers</string>
    <string name="today_stock_list">stock list</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="profile">Profile</string>
    <string name="portfolio">Portfolio</string>
    <string name="trade">Trade</string>
    <string name="report">Report</string>
    <string name="logout">Logout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="select_from_date">Select From Date</string>
    <string name="select_to_date">Select To Date</string>
    <string name="add">Add</string>
    <string name="add_amount">Add Amount</string>
    <string name="payin_amount">PayIn Amount</string>
    <string name="email">Email</string>
    <string name="cvv_number">CVV Number</string>
    <string name="card_number">Card Number</string>
    <string name="name_of_card">Name of Card</string>
    <string name="online_payment">Online Payment</string>
    <string name="add_fund">Add Fund</string>
    <string name="text_no_connectivity">No Connection</string>
    <string name="text_connectivity">Back Online</string>
    <string name="text_post_header">Post Header</string>
    <string name="exit_dialog_message">Are you sure want to exit?</string>
    <string name="exit_dialog_title">Exit?</string>
    <string name="option_yes">Yes</string>
    <string name="option_no">No</string>
    <string name="update_profile">Update Profile</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_phoneno">Enter PhoneNo</string>
    <string name="enter_panno">Enter PanNo</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_bank_details">Enter Bank Details</string>
    <string name="update_now">Update Now</string>
    <string name="cash">Cash</string>
    <string name="stock_code">Stock Code :</string>
    <string name="quntity">Quntity</string>
    <string name="price">Price</string>
    <string name="sell_now">Sell Now</string>
    <string name="buy_now">Buy Now</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="enter_repassword">Enter Re-Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up"><b><u>Sign up.</u></b></string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="already_have_an_hccount">Already have an hccount?</string>
    <string name="sign_in">Sign in</string>
    <string name="signin"><b><u>SignIn</u></b></string>
    <string name="forgot_password"><b>Forgot Password</b></string>
    <string name="enter_stock">Enter Stock</string>
    <string name="revert_fund">Revert Fund</string>
    <string name="payout_amount">PayOut Amount</string>
    <string name="brokerage">Brokerage</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="full_name">Full Name</string>
    <string name="bank_details">Bank Details</string>
    <string name="product">Product :</string>
    <string name="exchange">Exchange :</string>
    <string name="type">Type :</string>
    <string name="lot">Lot</string>
    <string name="clear">clear</string>
</resources>