<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/profile"
            android:title="@string/profile"
            android:icon="@drawable/ic_profile"/>
        <item
            android:id="@+id/portfolio"
            android:title="@string/portfolio"
            android:icon="@drawable/ic_portfolio"/>

        <item
            android:id="@+id/trade"
            android:title="@string/trade"
            android:icon="@drawable/ic_trade"
            app:showAsAction="collapseActionView"/>
           <!-- <menu>
                <item
                    android:id="@+id/equti"
                    android:title="equti"
                    android:icon="@drawable/ic_report_24"
                    />
                <item
                    android:id="@+id/fnado"
                    android:title="F and O"
                    android:icon="@drawable/ic_report_24"/>
                <item
                    android:id="@+id/fund"
                    android:title="fund"
                    android:icon="@drawable/ic_report_24"/>
            </menu>
        </item>-->


        <item
            android:id="@+id/report"
            android:title="@string/report"
            android:icon="@drawable/ic_report_24"/>

    </group>


</menu>